# just-tic

./: CLAUDE.md  CONTEXT.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-today-by-author-date-half-open-window.md  0002-commit-set-local-branches-dedup.md  0003-skip-merge-commits.md  0004-rename-detection-on.md  0005-noise-binary-gitignore-worktree.md  0006-clock-injection-core-cli-split.md
docs/agents/: issue-tracker.md  triage-labels.md
src/: lib.rs  main.rs
tests/: cli.rs  tally.rs
